
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;
typedef int pass ;
typedef int line ;
typedef int FILE ;


 int exit (int) ;
 int fclose (int *) ;
 int * fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int hex_decode (char*,char*,int) ;
 scalar_t__ ica_decrypt (char*,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 scalar_t__ strncmp (char*,char*,int) ;
 int usage () ;

int
main(int argc, char *argv[])
{
  FILE *f;
  u_char line[1024], pass[128];
  int len;

  if (argc != 2 || *argv[1] == '-')
    usage();

  if ((f = fopen(argv[1], "r")) == ((void*)0)) {
    perror("fopen");
    exit(1);
  }
  while (fgets(line, sizeof(line), f) != ((void*)0)) {
    if (strncmp(line, "Password=", 9) == 0) {
      len = hex_decode(line + 9, pass, sizeof(pass));
      if (ica_decrypt(pass, len))
        printf("; icadecrypt: [%s]\n", pass);
    }
    printf("%s", line);
  }
  fclose(f);

  exit(0);
}
